# flut

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
examples/catalog/: app.py  utils.py
examples/catalog/pages/: __init__.py  animation.py  asyncio.py  button.py  canvas.py  chatbox.py  dialog.py  focus.py  form.py  gesture.py  icon.py  image.py  layout.py  listenable.py  listview.py  menu.py  navigation.py  python.py  repro.py  selection.py  shortcut.py  slider.py  stress.py  theme.py  typography.py  widget.py
examples/catalog/widgets/: __init__.py  catalog_page.py  code_area.py  tiles.py
examples/demo/: app.py
flut/: __init__.py
flut/.flutter/: README.md  pubspec.yaml
flut/.flutter/lib/: main.dart
flut/.flutter/linux/: CMakeLists.txt
flut/.flutter/web/: index.html
flut/_flut/: engine.py  runtime.py
flut/_flut/native/: linux.py  macos.py  native.py  windows.py
flut/dart/: __init__.py  _dart.py  core.py  io.py  typed_data.py  ui.py
flut/flutter/animation/: __init__.py  animation.py  animation_controller.py  animation_style.py  curves.py
flut/flutter/foundation/: __init__.py  change_notifier.py  key.py  platform.py
flut/flutter/gestures/: __init__.py  drag_details.py  events.py  gesture_settings.py  long_press.py  recognizer.py  scale.py  tap.py  velocity_tracker.py
flut/flutter/material/: __init__.py  adaptive_text_selection_toolbar.py  app.py  app_bar.py  button_style.py  button_style_button.py  card.py  checkbox.py  chip.py  circle_avatar.py  color_scheme.py  colors.py  dialog.py  divider.py  (+40 more)
(+272 files in other folders)
