[project]
name = "flut"
description = "Bring Flutter to Python"
version = "0.0.6"
requires-python = ">=3.8"
readme = "README.md"
license-files = ["LICENSE"]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["flut*"]
exclude = ["flut/.flutter*"]

[tool.setuptools.package-data]
flut = ["assets/*.png", "assets/*.svg"]

[project.urls]
"Homepage" = "https://github.com/yangyuan/flut/"

